Revert "Java 9 compatibility (to be tested)."
This reverts commit c0781568989056f8db5edce8f65ae2f7cc0b70be.