@@ -12,12 +12,12 @@ done
 PRGDIR=`dirname "$PRG"`
 if [ "$1" = "" ]
   then if [ "$JAVA_HOME" != "" ]
-  then nice "$JAVA_HOME/bin/java" -Xms8m -Xmx64m --add-modules=java.activation -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger
-  else nice java -Xms8m -Xmx64m --add-modules=java.activation -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger
+  then nice "$JAVA_HOME/bin/java" -Xms8m -Xmx64m -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger
+  else nice java -Xms8m -Xmx64m -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger
   fi
 else
   if [ "$JAVA_HOME" != "" ]
-  then "$JAVA_HOME/bin/java" -Xms4m -Xmx16m --add-modules=java.activation -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger $1 $2
-  else java -Xms4m -Xmx16m --add-modules=java.activation -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger $1 $2
+  then "$JAVA_HOME/bin/java" -Xms4m -Xmx16m -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger $1 $2
+  else java -Xms4m -Xmx16m -classpath "$PRGDIR/routerlogger.jar:$PRGDIR/lib/*" it.albertus.router.RouterLogger $1 $2
   fi
 fi
